<resources>
    <string name="app_name">AssetTracker</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="firstname">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="domid">Cedula</string>
    <string name="address">Direccion</string>
    <string name="city">Ciudad</string>
    <string name="phonenumber">Telefono</string>
    <string name="loginhere">Ya tienes una cuenta? <u>Accede Aqui</u></string>
    <string name="signup">Inscribirse</string>
    <string name="signuphere">Crea una cuenta aqui. <u>Inscribirse</u></string>
    <string name="signuppassword">Password</string>
    <string name="sign_up">Inscribirse</string>
    <string name="welcome">Bienvenido!</string>
    <string name="vin">Matrícula</string>
    <string name="license">Placa</string>
    <string name="make">Marca</string>
    <string name="model">Modelo</string>
    <string name="year">Año</string>
    <string name="submit">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="tag_id">Tag ID</string>
    <string name="asset_registration">Formulario de Registro de Activo</string>
    <string name="register">Registrar Activo</string>
    <string-array name="type">
        <item>SUV</item>
        <item>Sedan</item>
        <item>Coupe</item>
        <item>Sport Car</item>
        <item>Station Wagon</item>
        <item>Hatchback</item>
        <item>Minivan</item>
        <item>Pickup Truck</item>
    </string-array>

    <string-array name="color">
        <item>Negro</item>
        <item>Blanco</item>
        <item>Gris</item>
        <item>Oro</item>
        <item>Azul</item>
        <item>Rojo</item>
        <item>Verde</item>
        <item>Amarillo</item>
        <item>Naranja</item>
    </string-array>

    <string-array name="brand">
        <item>Acura</item>
        <item>Alfa Romeo</item>
        <item>Audi</item>
        <item>Baic</item>
        <item>Bajaj</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Brilliance</item>
        <item>BYD</item>
        <item>Cadillac</item>
        <item>Changan</item>
        <item>Chery</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroen</item>
        <item>Daewoo</item>
        <item>Daihatsu</item>
        <item>Datsun</item>
        <item>DFM</item>
        <item>Dodge</item>
        <item>Dongfeng</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Foton</item>
        <item>Gac Gonow</item>
        <item>GMC</item>
        <item>Higer</item>
        <item>Hino</item>
        <item>Honda</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Isuzu</item>
        <item>Jac</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Jin-Bei</item>
        <item>JMC</item>
        <item>Kia</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Landwind</item>
        <item>Lexus</item>
        <item>Lincoln</item>
        <item>Mahindra</item>
        <item>Maserati</item>
        <item>Maxus</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mercedes-Benz</item>
        <item>Mercury</item>
        <item>MG</item>
        <item>Mini</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Oldsmobile</item>
        <item>Peugeot</item>
        <item>Piaggio</item>
        <item>Plymouth</item>
        <item>Pontiac</item>
        <item>Porsche</item>
        <item>Ram</item>
        <item>Renault</item>
        <item>Rolls Royce</item>
        <item>Samsung</item>
        <item>Seat</item>
        <item>Shineray</item>
        <item>Skoda</item>
        <item>Smart</item>
        <item>SsangYong</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Victory</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
        <item>ZX</item>
    </string-array>

    <string-array name="tagsdummy">
        <item>XR5RKM4XEZFM6ZWDCAA</item>
        <item>WEY4PS8TO08PUGN6FN9</item>
        <item>W386095Y4ADEZBC27X1</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="createalert">Crear Alerta</string>
    <string name="alertsbanner">Elige el Tag</string>
    <string name="tagalert">Informacion del Vehiculo</string>
    <string name="vehicle_id_alert">Vehicle Id Alert</string>
    <string name="view_map">Ver Mapa</string>
    <string name="disable_alert">Deshabilitar Alerta</string>
    <string name="alertvin">Matrícula</string>
    <string name="alertmodel">Model</string>
    <string name="alertmake">Make</string>
    <string name="alertcolor">Color</string>
    <string name="vinlabel">VIN</string>
    <string name="makelabel">Marca</string>
    <string name="modellabel">Modelo</string>
    <string name="colorlabel">Color</string>
    <string name="disablealertbanner">Elige una Alerta</string>
    <string name="type">Tipo</string>
</resources>