<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisableAlert"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/disablealertbanner"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        tools:targetApi="jelly_bean" />

    <!--Tags drop down-->
    <Spinner
        android:id="@+id/alerts_spinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:drawableEnd="@drawable/ic_dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <!-- Submit Button -->
    <Button
        android:id="@+id/submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@color/purple_500"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885"
        tools:ignore="MissingConstraints" />

    <!--Cancel Button-->
    <Button
        android:id="@+id/cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@color/red"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/submit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <!--Table-->
    <TableLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alerts_spinner"
        app:layout_constraintVertical_bias="0.296">

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/tagalert"
                android:textColor="@color/purple_500"
                android:textSize="15sp"
                android:gravity="center"
                tools:layout_conversion_absoluteHeight="26dp"
                tools:layout_conversion_absoluteWidth="65dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />
        </TableRow>
        <!-- VIN ROW -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </TableRow>

        <!-- Make ROW -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewVehicleMakeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/makelabel"
                android:gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppinsbold" />

            <TextView
                android:id="@+id/textViewVehicleMake_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertmake"
                android:gravity="left"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppinsbold" />

        </TableRow>
        <!-- Model ROW -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewVehicleModelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modellabel"
                android:gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppinsbold" />

            <TextView
                android:id="@+id/textViewVehicleModel_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertmodel"
                android:gravity="left"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppinsbold" />

        </TableRow>

        <!-- Color ROW -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewVehicleColorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorlabel"
                android:gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppinsbold" />

            <TextView
                android:id="@+id/textViewVehicleColor_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertcolor"
                android:gravity="left"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppinsbold" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>